--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     The application is a mobile arcade game, in retro style, that features a modern and innovative arcade gameplay combined with modern gameplay systems. </p> 
 <h4></h4> 
 <p><strong>User Provided Information</strong></p> 
-<p> Registration and log-in through google play services is optional. 
+<p> Registration and log-in through Google Play Services (Android) and Game Center (iOS) is optional. 
     However, please keep in mind that you may not be able to use some of the features (achievements, leaderboards, data sync) offered by the Application unless you register.</p> 
 <p></p> 
 <p><strong>Automatically Collected Information</strong></p> 
@@ -19,8 +19,9 @@
 <p></p> 
 <p></p> 
 <h4>What are my opt-out rights?</h4> 
-<p></p> 
-<p>You can stop all collection of information by the application easily by uninstalling the application.</p> 
+<p></p>
+<p>- You can stop all collection of information by the application by going through Options -> Open Data Privacy Page -> Opt-Out and Delete Data. </p>
+<p>- You can stop all collection of information by uninstalling the application.</p>
 <p></p> 
 <h4><strong>Children</strong></h4> 
 <p></p> 
